// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserIcon displays active user image correctly 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  accessibilityRole="image"
  testID="UserIcon.photo"
>
  <Image
    source={
      {
        "uri": "https://loremflickr.com/640/480?lock=4455548378415104",
      }
    }
    style={
      {
        "borderColor": "rgba(116, 172, 0, 1)",
        "borderRadius": 9999,
        "borderWidth": 3,
        "height": 40,
        "width": 40,
      }
    }
  />
</View>
`;

exports[`UserIcon displays small user image correctly 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  accessibilityRole="image"
  testID="UserIcon.photo"
>
  <Image
    source={
      {
        "uri": "https://loremflickr.com/640/480?lock=4455548378415104",
      }
    }
    style={
      {
        "borderRadius": 9999,
        "height": 22,
        "width": 22,
      }
    }
  />
</View>
`;

exports[`UserIcon displays user image correctly 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  accessibilityRole="image"
  testID="UserIcon.photo"
>
  <Image
    source={
      {
        "uri": "https://loremflickr.com/640/480?lock=4455548378415104",
      }
    }
    style={
      {
        "borderRadius": 9999,
        "height": 40,
        "width": 40,
      }
    }
  />
</View>
`;
